# pennsieve-ieeg-recon

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  license.txt  pyproject.toml  run_ieeg_recon.py
demodata/input/: electrodes.txt
demodata/input/freesurfer/mri/: T1.mgz  aparc+aseg.mgz  brain.mgz  lausanne2018.scale1.mgz  lausanne2018.scale2.mgz  lausanne2018.scale3.mgz  lausanne2018.scale4.mgz  lausanne2018.scale5.mgz
demodata/input/freesurfer/mri/transforms/: talairach.xfm
doc/atlasLUT/: lausanne2018scale1.csv  lausanne2018scale2.csv  lausanne2018scale3.csv  lausanne2018scale4.csv  lausanne2018scale5.csv
doc/freesurfer/subjects/cvs_avg35_inMNI152/mri/: lausanne2008.scale4.mgz  lausanne2008.scale5.mgz  lausanne2018.scale1.mgz  lausanne2018.scale2.mgz  lausanne2018.scale3.mgz
ieeg_recon/: __init__.py  create_itksnap_workspace.py  ieeg_recon.py
