[project]
name = "pennsieve-ieeg-recon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.0",
    "ipython>=8.0.0",
    "kaleido>=1.0.0",
    "matplotlib>=3.5.0",
    "nibabel>=3.2.0",
    "nilearn>=0.10.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "python-dotenv>=0.19.0",
    "rtree>=1.4.0",
    "scipy>=1.7.0",
    "trimesh>=3.0.0",
]
